[package]
name = "user-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.9"
sea-orm = { version = "0.12", features = [ "sqlx-mysql", "runtime-tokio-native-tls", "macros" ] }
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
tonic = "0.9.2"

[build-dependencies]
tonic-build = "0.9.2"
